# python-project-template

./: .flake8  .pre-commit-config.yaml  LICENSE  Readme.md  main.py  pyproject.toml  test_main.py
.github/workflows/: linters.yml  pre-commit.yml  unit_tests.yml
